# GE

./: CMakeLists.txt  GenerateProject.bat  LICENSE  README.md
Src/: Game.cpp
Src/Math/: MathTest.cpp  MathTest.h  MathTest.ispc  MathTestIspc.h
